VFS-2780 Fixing issue with spacing in iframe

--- a/src/public/assets/redoc.css
+++ b/src/public/assets/redoc.css
@@ -1,3 +1,10 @@
+/* Added because of strange spacing on page top */
+html, body {
+    border: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 api-logo img {
-    padding: 30px;
+    padding: 30px !important;
 }
